[package]
name = "afes_gamelaunchaer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.0"
toml = "0.5"
serde = { version = "1.0.145", features = ["derive"] }
tempfile = "3"

[dependencies.winapi]
version = "0.3.9"
features = ["winuser"]
